Fix grid for news panel, improve element spacing
Refs pombase/website#2415

--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -182,9 +182,12 @@
     grid-row: 3 / 4;
     grid-column: 3 / 5;
   }
- .front-news-feed {
+  .front-news-feed {
     grid-column: 2 / 4;
     grid-row: 4 / 12;
+  }
+  .explore, .pombetalks {
+    margin-left: auto;
   }
 }
 
@@ -211,7 +214,7 @@
   }
   .front-news-feed {
     grid-column: 2 / 5;
-    grid-row: 45 / 12;
+    grid-row: 4 / 12;
   }
 }
 @media (max-width: 799px) {
@@ -240,8 +243,6 @@
 }
 
 .front-panel {
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 2em;
 }
 
